# proboscis

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yml  pgcloak.dockerfile  pgcloak.example.toml
.github/workflows/: test.yml
crates/anonymization/: Cargo.toml
crates/anonymization/examples/: adult.csv  adult_dataset.rs
crates/anonymization/src/: lib.rs
crates/pgcloak/: Cargo.toml
crates/pgcloak/src/: config.rs  main.rs
crates/pgcloak/src/commands/: default.rs  inspect.rs  mod.rs
crates/postgres-protocol/: Cargo.toml
crates/postgres-protocol/src/: char_tag.rs  lib.rs  message.rs  startup_message.rs  util.rs
crates/proboscis-anonymization/: Cargo.toml
crates/proboscis-anonymization/examples/: adult_dataset.rs
crates/proboscis-anonymization/src/: algorithm.rs  conversion.rs  error.rs  lib.rs  transformer.rs
crates/proboscis-anonymization/src/column_transformations/: agg_median.rs  agg_range.rs  agg_string_common_prefix.rs  agg_string_join_unique.rs  mod.rs  randomize.rs
crates/proboscis-core/: Cargo.toml
crates/proboscis-core/src/: error.rs  lib.rs  proxy.rs  resolver.rs
crates/proboscis-core/src/data/: arrow.rs  field.rs  mod.rs
crates/proboscis-core/src/resolver/: error.rs  interface.rs  mod.rs  response.rs
crates/proboscis-core/src/utils/: arrow.rs  connection.rs  mod.rs
crates/proboscis-postgres-protocol/: Cargo.toml
crates/proboscis-postgres-protocol/src/: char_tag.rs  error.rs  lib.rs  message.rs  startup_message.rs  util.rs
crates/proboscis-resolver-datafusion/: Cargo.toml
crates/proboscis-resolver-datafusion/src/: lib.rs
crates/proboscis-resolver-postgres/: Cargo.toml
crates/proboscis-resolver-postgres/src/: lib.rs  pool.rs  target_config.rs
crates/proboscis-resolver-transformer/: Cargo.toml
crates/proboscis-resolver-transformer/src/: anonymization_transformer.rs  error.rs  interface.rs  lib.rs  projection.rs  resolver.rs  table_column_transformer.rs  traits.rs
crates/proboscis-resolver-transformer/src/column_transformations/: agg_median.rs  agg_range.rs  agg_string_join_unique.rs  mod.rs  randomize.rs  replace_string.rs
crates/proboscis-resolver-transformer/src/transformers/: mod.rs
crates/proboscis-resolver-transformer/src/transformers/anonymization/: algorithm.rs  conversion.rs  mod.rs  transformer.rs
crates/proboscis-resolver-transformer/src/transformers/table_column/: mod.rs
crates/proboscis-resolver-transformer/src/util/: mod.rs
examples/: Cargo.toml  anonymization.rs  anonymize_transformer.rs  datafusion.rs  general.rs  hash_id_transformer.rs  pool.rs  stupid_cache.rs  tls.rs  transformer.rs
examples/resources/csv/: users.csv
examples/setup/: mod.rs
examples/setup/sql_migrations_anonymization/: V1__initial.sql
experiments/: Cargo.toml  bench_anonymization.rs  competetive.rs  competetive_latency.rs  competetive_throughput.rs  csv.rs
experiments/benches/: competetive.rs
experiments/benchmark/: Cargo.toml
experiments/benchmark/benches/: main.rs
experiments/utils/: benchmark.rs  data.rs  docker.rs  fixtures.rs  mod.rs  port.rs
experiments/utils/docker/: mod.rs  pgbouncer.rs  pgcloak.rs  pgpool.rs  postgres.rs  stats.rs
resources/e2e-migrations/: V0__init.sql
src/: app.rs  arrow.rs  bin.rs  client.rs  config.rs  connection.rs  connection_pool.rs  core.rs  data.rs  lib.rs  main.rs  protocol.rs  proxy.rs  resolver.rs  transformer.rs
src/cache/: mod.rs
src/core/: connection.rs  mod.rs  proxy.rs
src/postgres_protocol/: message.rs  mod.rs  startup_message.rs
src/postgres_resolver/: connection_pool.rs  mod.rs  target_config.rs
src/protocol/: char_tag.rs  message.rs  mod.rs  startup_message.rs  util.rs
src/proxy/: config.rs  connection.rs  connection_pool.rs  core.rs  data.rs  mod.rs  resolver.rs  stream_wrapper.rs  transformer.rs  util.rs
src/transforming_resolver/: mod.rs
tests/: end-to-end-test.rs  general.rs  pooling.rs  stupid_cache.rs  tls.rs  transformer.rs
tests/openssl/: identity.p12
tests/sql_migrations/: V1__initial.sql
