[package]
name = "proboscis"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1.4.2"
bytes = "1"
tokio-postgres = { version = "0.7.1", optional = true }
postgres-native-tls = { version = "0.5.0", optional = true }
md-5 = "0.9.1"
omnom = "3.0.0"
tokio = { version = "1.4.0", features = ["full"] }
arrow = "3.0.0"
postgres = "0.19.1"
refinery = { version = "0.5.0", optional = true, features = ["tokio-postgres"] }
native-tls = "0.2.7"
tokio-native-tls = "0.3.0"
tempdir = { version = "0.3.7", optional = true }
tokio-util = "0.6.6"
async-trait = "0.1.50"

[dev-dependencies]
serial_test = "*"

[features]
e2e = ["tokio-postgres", "postgres-native-tls", "refinery", "tempdir"]

[[bin]]
bench = false
path = "src/bin.rs"
name = "proboscis"
