[package]
name = "proboscis"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1.4.2"
bytes = "1"
md-5 = "0.9.1"
omnom = "3.0.0"
tokio = { version = "1.4.0", features = ["full"] }
arrow = "3.0.0"
native-tls = "0.2.7"
tokio-native-tls = "0.3.0"
tokio-util = "0.6.6"
async-trait = "0.1.50"
deadpool = "0.8.2"
rand = "0.8.3"
futures = "0.3.15"
postgres = "0.19.1"
sqlparser = "0.9.0"
uuid = { version = "0.8", features = ["v4"] }
url = "2.2.2"

[dev-dependencies]
tokio-postgres = { version = "0.7.1" }
postgres-native-tls = { version = "0.5.0" }
refinery = { version = "0.5.0", features = ["tokio-postgres"] }
tempdir = { version = "0.3.7" }
maplit = "1.0.2"