[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
tokio-postgres = { version = "0.7.1" }
postgres-native-tls = { version = "0.5.0" }
refinery = { version = "0.5.0", features = ["tokio-postgres"] }
maplit = "1.0.2"
testcontainers = "0.12.0"
tracing-subscriber = "0.2"
tokio = { version = "1.4.0", features = ["full"] }
postgres = "0.19.1"
native-tls = "0.2.7"

proboscis-core = { version = "0.1.0", path = "../crates/proboscis-core" }
proboscis-resolver-postgres = { version = "0.1.0", path = "../crates/proboscis-resolver-postgres" }
proboscis-resolver-transformer = { version = "0.1.0", path = "../crates/proboscis-resolver-transformer" }

[[example]]
name = "general"
path = "general.rs"

[[example]]
name = "pool"
path = "pool.rs"

[[example]]
name = "tls"
path = "tls.rs"

[[example]]
name = "transformer"
path = "transformer.rs"

[[example]]
name = "anonymization"
path = "anonymization.rs"
