[package]
name = "benchmark"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
tokio-postgres = { version = "0.7.1" }
postgres-native-tls = { version = "0.5.0" }
refinery = { version = "0.5.0", features = ["tokio-postgres"] }
tempdir = "0.3.7"
testcontainers = "0.12.0"
tracing-subscriber = "0.2"
postgres = "0.19.1"
indoc = "1.0"

proboscis-resolver-postgres = { version = "0.1.0", path = "../crates/proboscis-resolver-postgres" }

[[example]]
name = "competetive"
path = "competetive.rs"