[package]
name = "benchmark"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
tokio-postgres = { version = "0.7.1" }
postgres-native-tls = { version = "0.5.0" }
refinery = { version = "0.5.0", features = ["tokio-postgres"] }
tempdir = "0.3.7"
testcontainers = "0.12.0"
tracing-subscriber = "0.2"
postgres = "0.19.1"
indoc = "1.0"
itertools = "0.10.1"
shiplift = "0.7"
futures = "0.3.18"
tokio = "1.14.0"
inline-python = { version = "0.7.1", optional = true }
url = "2"
arrow = "5.5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
ndarray = "0.15"
ndarray-stats = "0.5"
naivebayes = "0.1.1"
anyhow = "1.0"

proboscis-resolver-postgres = { version = "0.1.0", path = "../crates/proboscis-resolver-postgres" }

[dependencies.polars]
git = "https://github.com/pola-rs/polars"
branch = "arrow-rs"
default-features = true
features = ["dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16", "ndarray"]

[[example]]
name = "competetive_latency"
path = "competetive_latency.rs"

[[example]]
name = "bench_anonymization"
path = "bench_anonymization.rs"

[[example]]
name = "csv"
path = "csv.rs"

[features]
analysis = ["inline-python"]