[package]
name = "pgcloak"
description = "An anonymizing postgres proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3.0"
config = "0.11.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = "1.4.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7.5"

proboscis-core = { version = "0.1.0", path = "../proboscis-core" }
proboscis-resolver-postgres = { version = "0.1.0", path = "../proboscis-resolver-postgres" }
proboscis-resolver-transformer = { version = "0.1.0", path = "../proboscis-resolver-transformer" }
proboscis-anonymization = { version = "0.1.0", path = "../proboscis-anonymization" }