[package]
name = "proboscis-anonymization"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1"
arrow = "5.5.0"
itertools = "0.10.1"
rand = "0.8.4"
tracing = "0.1"

proboscis-resolver-transformer = { version = "0.1.0", path = "../proboscis-resolver-transformer" }

[dependencies.polars]
git = "https://github.com/pola-rs/polars"
branch = "arrow-rs"
default-features = true
features = ["dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16"]