[package]
name = "proboscis-resolver-datafusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "5.0"
async-trait = "0.1.50"
anyhow = "1.0"

proboscis-core = { version = "0.1.0", path = "../proboscis-core" }