[package]
name = "proboscis-resolver-postgres"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
omnom = "3.0.0"
tokio = { version = "1.4.0", features = ["full"] }
arrow = "5.5.0"
async-trait = "0.1.50"
deadpool = "0.8.2"
futures = "0.3.15"
tracing = "0.1"
url = "2.2.2"

proboscis-postgres-protocol = { version = "0.0.0", path = "../proboscis-postgres-protocol" }
proboscis-core = { version = "0.1.0", path = "../proboscis-core" }
