[package]
name = "proboscis-resolver-transformer"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
arrow = "3.0.0"
async-trait = "0.1.50"
sqlparser = "0.9.0"
uuid = { version = "0.8", features = ["v4"] }

postgres-protocol = { version = "0.0.0", path = "../postgres-protocol" }
proboscis-core = { version = "0.1.0", path = "../proboscis-core" }
